[gd_scene load_steps=7 format=2]

[ext_resource path="res://scan.gd" type="Script" id=1]
[ext_resource path="res://assets/wave.png" type="Texture" id=2]
[ext_resource path="res://scanhitbox.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/00 - Desktop - tos scanner.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 115.744, 696.318 )

[sub_resource type="Animation" id=2]

length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.00244132, 0.00244132 ), Vector2( 0.692701, 0.692701 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.764706, 0.556863 ), Color( 0, 1, 0.764706, 0 ) ]
}

[node name="scan" type="Node2D"]
position = Vector2( -0.0336552, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.764706, 0 )
scale = Vector2( 0.692701, 0.692701 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 1700.64, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scan"
anims/scan = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="area_shape_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
